2.1.0 (January XX, 2025)
 - Added two new configuration options for the SDK storage in browsers when using storage type `LOCALSTORAGE`:
    - `storage.expirationDays` to specify the validity period of the rollout cache.
    - `storage.clearOnInit` to clear the rollout cache on SDK initialization.
 - Bugfixing - Properly handle rejected promises when using targeting rules with segment matchers in consumer modes (e.g., Redis and Pluggable storages).

2.0.2 (December 3, 2024)
 - Updated the factory `init` and `destroy` methods to support re-initialization after destruction. This update ensures compatibility of the React SDK with React Strict Mode, where the factory's `init` and `destroy` effects are executed an extra time to validate proper resource cleanup.
 - Bugfixing - Sanitize the `SplitSDKMachineName` header value to avoid exceptions on HTTP/S requests when it contains non ISO-8859-1 characters (Related to issue https://github.com/splitio/javascript-client/issues/847).

2.0.1 (November 25, 2024)
 - Bugfixing - Fixed an issue with the SDK_UPDATE event on server-side, where it was not being emitted if there was an empty segment and the SDK received a feature flag update notification.

2.0.0 (November 1, 2024)
 - Added support for targeting rules based on large segments.
 - Added `factory.destroy()` method, which invokes the `destroy` method on all SDK clients created by the factory.
 - Added `SplitIO` namespace with the public TypeScript definitions to be reused by the SDKs.
 - Updated the handling of timers and async operations inside an `init` factory method to enable lazy initialization of the SDK in standalone mode. This update is intended for the React SDK.
 - Bugfixing - Fixed an issue with the server-side polling manager that caused dangling timers when the SDK was destroyed before it was ready.
 - BREAKING CHANGES:
   - Updated default flag spec version to 1.2, which requires Split Proxy v5.9.0 or higher.