@@ -3,10 +3,14 @@ import { EventEmitter } from '../../utils/MinEvents';
 import { IReadinessManager } from '../types';
 import { SDK_READY, SDK_UPDATE, SDK_SPLITS_ARRIVED, SDK_SEGMENTS_ARRIVED, SDK_READY_FROM_CACHE, SDK_SPLITS_CACHE_LOADED, SDK_READY_TIMED_OUT } from '../constants';
 import { ISettings } from '../../types';
+import { STORAGE_LOCALSTORAGE } from '../../utils/constants';
 
 const settings = {
   startup: {
     readyTimeout: 0,
+  },
+  storage: {
+    type: STORAGE_LOCALSTORAGE
   }
 } as unknown as ISettings;
 
@@ -67,7 +71,14 @@ test('READINESS MANAGER / Ready event should be fired once', () => {
   const readinessManager = readinessManagerFactory(EventEmitter, settings);
   let counter = 0;
 
+  readinessManager.gate.on(SDK_READY_FROM_CACHE, () => {
+    expect(readinessManager.isReadyFromCache()).toBe(true);
+    expect(readinessManager.isReady()).toBe(true);
+    counter++;
+  });
+
   readinessManager.gate.on(SDK_READY, () => {
+    expect(readinessManager.isReadyFromCache()).toBe(true);
     expect(readinessManager.isReady()).toBe(true);
     counter++;
   });
@@ -79,7 +90,7 @@ test('READINESS MANAGER / Ready event should be fired once', () => {
   readinessManager.splits.emit(SDK_SPLITS_ARRIVED);
   readinessManager.segments.emit(SDK_SEGMENTS_ARRIVED);
 
-  expect(counter).toBe(1); // should be called once
+  expect(counter).toBe(2); // should be called once
 });
 
 test('READINESS MANAGER / Ready from cache event should be fired once', (done) => {
@@ -88,6 +99,7 @@ test('READINESS MANAGER / Ready from cache event should be fired once', (done) =
 
   readinessManager.gate.on(SDK_READY_FROM_CACHE, () => {
     expect(readinessManager.isReadyFromCache()).toBe(true);
+    expect(readinessManager.isReady()).toBe(false);
     counter++;
   });
 
