@@ -2,6 +2,7 @@
  - Added two new configuration options for the SDK storage in browsers when using storage type `LOCALSTORAGE`:
     - `storage.expirationDays` to specify the validity period of the rollout cache.
     - `storage.clearOnInit` to clear the rollout cache on SDK initialization.
+ - Updated SDK_READY_FROM_CACHE event when using `LOCALSTORAGE` storage type to be emitted alongside SDK_READY event in case it has not been emitted.
  - Bugfixing - Properly handle rejected promises when using targeting rules with segment matchers in consumer modes (e.g., Redis and Pluggable storages).
 
 2.0.2 (December 3, 2024)
